# MoUSE-GUI

./: .gitignore  .yapfignore  CITATION.cff  LICENSE  README.md  Untitled.ipynb  authors.md  format_code.sh  pyproject.toml  regenerate_gui.ps1  regenerate_gui.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: code-linter.yml
experimental/: dupa_test.py  level_set.py  test_checkboxes.py  test_custom_table_widget.py
qt_designer/: filename_widget.ui  mouse_main_window.ui  progress_bar.ui  project_tab.ui  spectrogram_tab.ui
qt_designer/init_project/: basic_metadata.ui  load_audio.ui  main_window.ui  project_entry.ui  select_project.ui
qt_designer/key_value_metadata/: key_value_widget.ui  new_key_value_widget.ui
qt_designer/settings/: classification_settings.ui  denoising_settings.ui  detection_settings.ui  filtering_settings.ui  preview_settings.ui  settings.ui
src/mouseapp/: context_manager.py  main.py
src/mouseapp/controller/: classification_controller.py  denoising_controller.py  detection_controller.py  filtering_controller.py  main_controller.py  persistency_controller.py  utils.py
src/mouseapp/controller/settings_controllers/: bilateral_settings_controller.py  classification_controller.py  common_settings_controller.py  filtering_settings_controller.py  gac_optimisation_controller.py  gac_settings_controller.py  neural_settings_controller.py  no_filter_settings_controller.py  noise_gate_settings_controller.py  sdts_settings_controller.py  utils.py
src/mouseapp/model/: annotation_table_model.py  constants.py  main_models.py  utils.py
src/mouseapp/model/settings/: classification_models.py  denoising_models.py  detection_models.py  filtering_model.py  settings_model.py  utils.py
src/mouseapp/view/: classification_settings_view.py  denoising_settings_view.py  detection_settings_view.py  filtering_settings_view.py  main_view.py  preview_settings_view.py  project_init_view.py  settings_view.py  utils.py  view_constants.py  widgets.py
tests/: file_loading_test.py  model_fixtures.py  project_metadata_operations_test.py  project_tab_updates_test.py  requirements-test.txt  src_test.py
tests/persistency/: model_serialization_test.py  persistency_controller_test.py
tests/project_initialization/: general_test.py  widget_test.py
