[tool.poetry]
name = "MoUSE-GUI"
version = "1.0.1"
description = ""
authors = ["JosephTheMoUSEdevelopers <JosephTheMoUSEdevelopers@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
appdirs = "1.4.4"
deepdish = "0.3.7"
environ-config = "23.2.0"
matplotlib = "3.8.4"
MoUSE = { git = "https://github.com/JosephTheMoUSE/MoUSE.git", branch = "python3.11-adjustment" }
numpy = "1.26.4"
pandas = "2.2.2"
PySide6 = "6.7.0"
pytorch-lightning = "2.2.2"
ray = { version = "2.10.0", extras = ["tune"] }

[tool.yapf]
based_on_style = "google"
split_all_top_level_comma_separated_values = true
column_limit = 120

[tool.poetry.dev-dependencies]
yapf = "0.40.2"
pytest = "8.2.0"
pytest-qt = "4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"