[tool.poetry]
name = "MoUSE-GUI"
version = "1.0.0"
description = "Joseph the MoUSE: Application for rodent ultrasonic identification - frontend. Described in: Kania, Adam, et al. \"Joseph the MoUSE—Mouse Ultrasonic Sound Explorer.\" SoftwareX 25 (2024): 101606."
authors = ["JosephTheMoUSE <josephthemouse@googlegroups.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
appdirs = "1.4.4"
environ-config = "23.2.0"
kaleido = "0.2.1"
matplotlib = "3.8.4"
MoUSE = { git = "https://github.com/JosephTheMoUSE/MoUSE.git", branch = "main" }
numpy = "1.26.4"
pandas = "1.5.3"
PySide6 = "6.7.0"
pytorch-lightning = "2.2.2"
ray = { version = "2.10.0", extras = ["tune"] }
notebook = "^7.2.2"

[tool.poetry.group.dev.dependencies]
yapf = "0.40.2"
pytest = "8.2.0"
pytest-qt = "4.4.0"

[tool.yapf]
based_on_style = "google"
split_all_top_level_comma_separated_values = true
column_limit = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
